; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_subr.c_ifclassq_update.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_subr.c_ifclassq_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifclassq = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ifclassq_update(%struct.ifclassq* %0, i32 %1) #0 {
  %3 = alloca %struct.ifclassq*, align 8
  %4 = alloca i32, align 4
  store %struct.ifclassq* %0, %struct.ifclassq** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ifclassq*, %struct.ifclassq** %3, align 8
  %6 = call i32 @IFCQ_LOCK_ASSERT_HELD(%struct.ifclassq* %5)
  %7 = load %struct.ifclassq*, %struct.ifclassq** %3, align 8
  %8 = call i32 @IFCQ_IS_READY(%struct.ifclassq* %7)
  %9 = call i32 @VERIFY(i32 %8)
  %10 = load %struct.ifclassq*, %struct.ifclassq** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @IFCQ_UPDATE(%struct.ifclassq* %10, i32 %11)
  ret void
}

declare dso_local i32 @IFCQ_LOCK_ASSERT_HELD(%struct.ifclassq*) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @IFCQ_IS_READY(%struct.ifclassq*) #1

declare dso_local i32 @IFCQ_UPDATE(%struct.ifclassq*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
